// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render as default 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    <h1>
      header
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway background 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="background"
  >
    <h1>
      background
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway backgroundAlt 1`] = `
.emotion-0 {
  border-color: rgb(240, 240, 240);
  background-color: rgb(247, 247, 247);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="backgroundAlt"
  >
    <h1>
      backgroundAlt
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway danger 1`] = `
.emotion-0 {
  border-color: rgb(186, 32, 47);
  background-color: rgb(220, 53, 69);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="danger"
  >
    <h1>
      danger
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway dark 1`] = `
.emotion-0 {
  border-color: rgb(51, 51, 51);
  background-color: rgb(26, 26, 26);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="dark"
  >
    <h1>
      dark
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway info 1`] = `
.emotion-0 {
  border-color: rgb(18, 130, 147);
  background-color: rgb(23, 162, 184);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="info"
  >
    <h1>
      info
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway light 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(240, 240, 240);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="light"
  >
    <h1>
      light
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway neutral 1`] = `
.emotion-0 {
  border-color: rgb(102, 102, 102);
  background-color: rgb(127, 127, 127);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="neutral"
  >
    <h1>
      neutral
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway primary 1`] = `
.emotion-0 {
  border-color: rgb(204, 136, 0);
  background-color: rgb(255, 170, 0);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="primary"
  >
    <h1>
      primary
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway prominent 1`] = `
.emotion-0 {
  border-color: rgb(204, 136, 0);
  background-color: rgb(255, 170, 0);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="prominent"
  >
    <h1>
      prominent
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway secondary 1`] = `
.emotion-0 {
  border-color: rgb(0, 125, 225);
  background-color: rgb(26, 153, 255);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="secondary"
  >
    <h1>
      secondary
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway selected 1`] = `
.emotion-0 {
  border-color: rgb(204, 136, 0);
  background-color: rgb(255, 170, 0);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="selected"
  >
    <h1>
      selected
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway success 1`] = `
.emotion-0 {
  border-color: rgb(32, 134, 55);
  background-color: rgb(40, 167, 69);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="success"
  >
    <h1>
      success
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway tertiary 1`] = `
.emotion-0 {
  border-color: rgb(0, 122, 122);
  background-color: rgb(0, 153, 153);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="tertiary"
  >
    <h1>
      tertiary
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway typography 1`] = `
.emotion-0 {
  border-color: rgb(1, 1, 1);
  background-color: rgb(1, 1, 1);
  color: rgb(255, 255, 255);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="typography"
  >
    <h1>
      typography
    </h1>
  </header>
</div>
`;

exports[`Header should render colorway warning 1`] = `
.emotion-0 {
  border-color: rgb(210, 157, 0);
  background-color: rgb(255, 193, 7);
  color: rgb(1, 1, 1);
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
    color="warning"
  >
    <h1>
      warning
    </h1>
  </header>
</div>
`;

exports[`Header should render padding giant 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  padding: 64px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    giant
  </header>
</div>
`;

exports[`Header should render padding large 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  padding: 24px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    large
  </header>
</div>
`;

exports[`Header should render padding max 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  padding: 88px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    max
  </header>
</div>
`;

exports[`Header should render padding medium 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  padding: 16px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    medium
  </header>
</div>
`;

exports[`Header should render padding min 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  padding: 0px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    min
  </header>
</div>
`;

exports[`Header should render padding small 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  padding: 12px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    small
  </header>
</div>
`;

exports[`Header should render padding tiny 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  padding: 2px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    tiny
  </header>
</div>
`;

exports[`Header should render padding xLarge 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  padding: 32px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    xLarge
  </header>
</div>
`;

exports[`Header should render padding xSmall 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  padding: 8px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    xSmall
  </header>
</div>
`;

exports[`Header should render padding xxLarge 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  padding: 48px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    xxLarge
  </header>
</div>
`;

exports[`Header should render padding xxSmall 1`] = `
.emotion-0 {
  border-color: rgb(224, 224, 224);
  background-color: rgb(255, 255, 255);
  color: rgb(1, 1, 1);
  padding: 4px;
}

@media (min-width: 1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <header
    class="emotion-0"
  >
    xxSmall
  </header>
</div>
`;
